# flypy-typing

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml  release-package.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.backend.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260310_0001_initial_schema.py  20260316_0002_add_knowledge_chunks.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  ai.py  auth.py  content.py  health.py  practice.py  users.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  ai.py  auth.py  content.py  practice.py  user.py
backend/app/services/: ai_runtime.py  coach.py  email.py  knowledge_base.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
docs/: ai-module-implementation-guide.md
src/: App.tsx  index.css
src/api/: client.ts
src/components/AI/: AICoachPanel.legacy.tsx  AICoachPanel.tsx
src/components/Auth/: AuthPanel.tsx
src/components/KeyboardMap/: KeyboardMap.tsx
src/components/Layout/: Header.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/Stats/: HistoryPanel.tsx  (+2 more)
src/data/: flypy.ts
src/stores/: aiStore.ts  articleStore.ts  authStore.ts  historyStore.ts  settingsStore.ts  typingStore.ts
src/utils/: markdown.ts  pinyin.ts  sound.ts  speedLevel.ts
(+4 files in other folders)
